syntax = "proto3";
package proto;

option go_package = "./proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// PaladinTalents message.
message PaladinTalents {
}

// END GENERATED

enum Blessings {
	BlessingUnknown = 0;
	BlessingOfKings = 1;
	BlessingOfMight = 2;
}

enum PaladinSeal {
	Truth = 0;
	Justice = 1;
	Insight = 2;
	Righteousness = 3;
}

message PaladinOptions {
	PaladinSeal seal = 2;
}

message RetributionPaladin {
	message Rotation {}

	message Options {
		PaladinOptions class_options = 1;
	}
	Options options = 3;
}

message ProtectionPaladin {
	message Rotation {}

	message Options {
		PaladinOptions class_options = 1;
	}
	Options options = 3;
}

message HolyPaladin {
	message Rotation {}

	message Options {
		PaladinOptions class_options = 2;
	}
	Options options = 3;
}
